--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,11 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 
 <body>
-
+    <header>
+        <a href="/">главная</a>
+        <a href="/edite">редактирование</a>
+        <a href="/serch">поиск</a>
+        <a href="/users">пользователи</a>
+    </header>
 
     {{{body}}}
 </body>
