front edite, back treatment

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <main>
-    <h1>это главная страница</h1>
+    <h1>Главная</h1>
 </main>
 <div class="form_auth_block">
     <div class="form_auth_block_content">
