--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,7 @@
     <header>
         <a href="/">главная</a>
         <a href="/edite">редактирование</a>
-        <a href="/serch">поиск</a>
+        <a href="/search">поиск</a>
         <a href="/users">пользователи</a>
     </header>
 
