--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,12 +1,13 @@
 <main>
-    <h1>это страница поиска</h1>
+    <h1>Поиск</h1>
 </main>
 <div>
     <div class="nav">
 
         <div style="margin: 40px 40px 0;">
-            <input type="date" name="" id="">
-            <input style="margin-left:230px;" type="text" placeholder="логин">
+            с <input type="date" name="" id="">
+            по <input type="date" name="" id="">
+            <input style="margin-left:10px;" type="text" placeholder="тг_логин">
         </div>
         <input style="margin: 5px 40px 0;" type="button" value="поиск">
     </div>
