--- a/views/edite.hbs
+++ b/views/edite.hbs
@@ -1,14 +1,35 @@
 <main>
-    <h1>это страница редактирование</h1>
+    <h1>Редактирование</h1>
 </main>
 <div>
     <div class="nav">
 
         <div style="margin: 40px 40px 0;">
-            <input type="text" name="" id="" placeholder="логин">
-            <input style="margin-left:230px;" type="button" value="добавить">
-            <input style="margin-top: 10px;" type="text" name="" id="" placeholder="логин">
-            <input style="margin-left:230px;" type="button" value="удалить">
+            <input type="text" name="" id="login_tg" placeholder="тг_логин">
+            <input type="text" name="" id="name_guest" placeholder="фио">
+            <input style="margin-left:10px;" type="button" id="addUserInput" value="добавить">
+            <input style="margin-left:10px;" type="button" id="disableAccessInput" value="Отключить доступ">
 
         </div>
     </div>
+
+
+    <script>
+        document.getElementById('addUserInput').onclick = () => {
+            const login_tg = document.getElementById('login_tg').value;
+            const name_guest = document.getElementById('name_guest').value;
+
+            fetch(`/addUser?login_tg=${login_tg}&name_guest=${name_guest}`)
+                .then(res => res.json())
+                .then(res => console.log(res))
+        }
+
+        document.getElementById('disableAccessInput').onclick = () => {
+            const login_tg = document.getElementById('login_tg').value;
+            const name_guest = document.getElementById('name_guest').value;
+
+            fetch(`/disableAccess?login_tg=${login_tg}&name_guest=${name_guest}`)
+                .then(res => res.json())
+                .then(res => console.log(res))
+        }
+    </script>
